--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.0",
+    "@react-native-community/netinfo": "^8.2.0",
     "@react-native-firebase/app": "^14.5.1",
     "@react-native-firebase/auth": "^14.5.1",
     "@react-native-firebase/firestore": "^14.5.1",
@@ -21,7 +23,8 @@
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
